

********************************************************************
						V1.3
********************************************************************



#### MISC
********************************************************************
- Change qualify to 7 chars : 
	db change mysql :
		ALTER TABLE cc_iax_buddies CHANGE qualify qualify char(7);
		ALTER TABLE cc_sip_buddies CHANGE qualify qualify char(7);
	db change psql :
		ALTER TABLE cc_iax_buddies ALTER COLUMN qualify TYPE char(7);
		ALTER TABLE cc_sip_buddies ALTER COLUMN qualify TYPE char(7);
	
- Correction on alarm spelling
- Add export rates csv & xml
- BUG : wrong audio file prepaid-enter-pin-number.gsm
- BUG : peer sip iax qualify & nat & sip/iax info on Customer UI display 
- UPDATE : scrollbar on textarea
- UPDATE : naming on batch update
- UPDATE : Help files
- UPDATE : remove paypal section from conf files
- UPDATE : Display ratecard 100% wide
- BUG : Reporting


#### NEW LOGO ON MAIN PAGE
********************************************************************


#### MOVE THIS IN CONF FILE
********************************************************************
	and this the a2billing-callback-daemon:
	
	####### ASTERISK MANAGER ######
	my $manager_host = "localhost";
	my $manager_username = "myasterisk";
	my $manager_secret = "mycode"; 

use a2billing.conf
[global]
; MANAGER CONNECTION PARAMETERS
manager_host = localhost
manager_username = myasterisk
manager_secret = mycode


#### FILE USED ?
********************************************************************
trunk/A2BCustomer_UI/lib/epayment/includes/PP_header.php
trunk/A2Billing_UI/lib/epayment/includes/PP_header.php

To remove : 
trunk/A2Billing_UI/signup/PP_footer.php
trunk/A2Billing_UI/signup/PP_header.php

#### BUG : IAX / SIP friends
********************************************************************
I have the BLANK PAGE when I click to generate the iax friend 
it happens on the first user in the system


#### BUG : IE Customer UI