@@ -5,6 +5,16 @@
 ********************************************************************
 
 
+#### BUG : CallBack
+********************************************************************
+DIVIDE THE AMOUNT OF CREDIT BY 2 IN ORDER TO AVOID NEGATIVE BALANCE IF THE USER USE ALL HIS CREDIT
+
+
+#### BUG : Customer UI
+********************************************************************
+from the user portal, i'm able to add more than 5 callerID eventhough i just set limit_callerid = 2. Is it a BUG or just i'm having this problem?
+http://forum.asterisk2billing.org/viewtopic.php?t=2250
+
 
 #### MISC
 ********************************************************************
